# podmesh

./: .env.example  .gitignore  Cargo.toml  Containerfile.agent  Containerfile.server  Makefile  README.md
crates/podmesh-agent/: Cargo.toml
crates/podmesh-agent/src/: api.rs  main.rs  registration.rs
crates/podmesh-cli/: Cargo.toml
crates/podmesh-cli/src/: client.rs  main.rs  output.rs
crates/podmesh-cli/src/commands/: containers.rs  images.rs  mod.rs  networks.rs  nodes.rs  pods.rs  volumes.rs
crates/podmesh-client/: Cargo.toml
crates/podmesh-client/src/: client.rs  containers.rs  images.rs  lib.rs  networks.rs  pods.rs  transport.rs  volumes.rs
crates/podmesh-core/: Cargo.toml
crates/podmesh-core/src/: error.rs  lib.rs  types.rs
crates/podmesh-core/src/models/: container.rs  event.rs  image.rs  mod.rs  network.rs  node.rs  pod.rs  volume.rs
crates/podmesh-server/: Cargo.toml
crates/podmesh-server/src/: main.rs
crates/podmesh-server/src/api/: containers.rs  events.rs  health.rs  images.rs  mod.rs  networks.rs  nodes.rs  pods.rs  volumes.rs
crates/podmesh-server/src/config/: mod.rs
crates/podmesh-server/src/state/: mod.rs
crates/podmesh-server/src/ws/: mod.rs
docs/: ARCHITECTURE.md
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/containers/: page.tsx
web/src/app/events/: page.tsx
web/src/app/images/: page.tsx
web/src/app/networks/: page.tsx
web/src/app/nodes/: page.tsx
web/src/app/volumes/: page.tsx
web/src/components/layout/: sidebar.tsx
web/src/components/ui/: dialog.tsx
web/src/hooks/: use-websocket.ts
web/src/lib/: api.ts  store.ts  utils.ts
web/src/types/: index.ts
