[workspace]
members = [
    "crates/podmesh-core",
    "crates/podmesh-client",
    "crates/podmesh-server",
    "crates/podmesh-agent",
    "crates/podmesh-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/podmesh/podmesh"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (Unix socket support for Podman)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Config
config = "0.14"

# Async utils
futures = "0.3"
tokio-stream = "0.1"
tokio-tungstenite = "0.26"

# Internal crates
podmesh-core = { path = "crates/podmesh-core" }
podmesh-client = { path = "crates/podmesh-client" }
