[package]
name = "podmesh-cli"
description = "PodMesh CLI — command-line interface for PodMesh server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "podmesh"
path = "src/main.rs"

[dependencies]
podmesh-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
