[package]
name = "podmesh-core"
description = "Shared models, types, and traits for PodMesh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
